added equipment and equipmentList javascript to dynamically render equipment HTML to the DOM.

--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,8 @@
 /* @css style sheets */
 @import './elements/employee.css';
+@import './elements/equipment.css';
 
+/* General style commands */
 .container {
     display: flex;
 }
