--- a/styles/elements/employee.css
+++ b/styles/elements/employee.css
@@ -1,11 +1,16 @@
 .employee {
     border: 3px solid sandybrown;
+    flex-wrap: wrap;
     margin: 5px auto;
-    min-width: 300px;
+    max-height: 150px;
+    min-width: 150px;
     padding: 15px 25px;
 }
 
-.employees {
-    display: flexbox;
+.container--employees {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: auto;
+    margin-right: 2em;
     width: 50%;
 }
