--- a/styles/elements/equipment.css
+++ b/styles/elements/equipment.css
@@ -1,12 +1,12 @@
 .equipment {
-    border: 3px solid black;
+    border: 3px solid darkgrey;
     margin: 5px auto;
     min-width: 300px;
     max-width: 400px;
     padding: 15px 25px;
 }
 
-.container--equipment {
+#container--equipment {
     display: block;
     margin-left: 2em;
     margin-right: auto;
