--- a/styles/elements/footer.css
+++ b/styles/elements/footer.css
@@ -1,4 +1,7 @@
 #javaFooter {
+    background-color: burlywood;
     display: flex;
     justify-content: space-between;
+    padding-left: 25px;
+    padding-right: 25px;
 }
