--- a/styles/elements/product.css
+++ b/styles/elements/product.css
@@ -1,5 +1,5 @@
 .product {
-    border: 3px solid sandybrown;
+    border: 3px solid black;
     flex-wrap: wrap;
     margin: 5px auto;
     max-height: 150px;
@@ -7,7 +7,7 @@
     padding: 15px 25px;
 }
 
-.container--products {
+#container--products {
     display: flex;
     flex-wrap: wrap;
     margin-left: auto;
